--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,12 +9,15 @@
 
 .menu-bars {
   margin-left: 2rem;
-  font-size: 2rem;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
   background: "none";
 }
 
 .nav-menu {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   width: 280px;
   height: 100vh;
   display: flex;
@@ -34,33 +37,39 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 8px 0px 8px 16px;
+  padding: 8px 0px;
   list-style: none;
   height: 60px;
 }
 
 .nav-text a {
   text-decoration: none;
-  color: #A6ABB2;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
+  color: #a6abb2;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  width: 100%;
+  height: 52px;
   display: flex;
   align-items: center;
-  padding: 0 16px;
-  border-radius: 4px;
+  padding: 0 40px;
 }
 
 .nav-text a:hover {
   background-color: #fff;
 }
 
+.selected {
+  color: #000 !important;
+  background-color: #fff;
+}
 .nav-menu-items {
   width: 280px;
 }
 
 .navbar-toggle {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   width: 280px;
   height: 80px;
   display: flex;
@@ -70,4 +79,22 @@
 
 span {
   margin-left: 16px;
+}
+
+.logo {
+  padding: 40px;
+}
+
+.active {
+  color: #000;
+}
+
+.menu-subheading {
+  font-family: "Space Grotesk", "sans-serif";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px !important;
+  line-height: 17px;
+  color: #2a2a2a;
+  padding: 15px 40px;
 }
