--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,75 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap");
 @font-face {
-  font-family: 'Founders Grotesk';
-  src: url('./assets/fonts/FoundersGrotesk-Regular.otf') format('otf'),
+  font-family: "Founders Grotesk";
+  src: url("./assets/fonts/FoundersGrotesk-Regular.otf") format("otf");
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Founders Grotesk', sans-serif;
+  font-family: "Founders Grotesk", sans-serif;
+}
+
+.container {
+  /* margin-right: auto;
+  margin-left: auto;
+  max-width: 960px; */
+  height: 100vh;
+  display: flex;
+  /* padding-right: 10px;
+  padding-left: 10px; */
 }
 
 .dashboard,
 .analytics,
 .balances,
-.customers {
+.customers,
+.aboutus {
   display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 2rem;
+  flex-direction: column;
+  width: 100%;
+  background: #ffffff;
   margin-left: 280px;
   transition: 350ms;
 }
 
-.closed{
+.closed {
   margin-left: 0px;
   transition: 850ms;
+}
+
+.header {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 0 0 0 40px;
+  line-height: 22px;
+  color: #2a2a2a;
+}
+
+.date {
+  width: 124px;
+  height: 14px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  color: #a6abb2;
+}
+
+.card-container {
+  flex-direction: row;
+  display: flex;
+  max-width: 720px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
+}
+
+@media screen and (max-width: 600px) {
+  .card-container {
+    height: 380px;
+  }
 }
