Edited Table styles and page alignment

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -56,7 +56,7 @@
 @media screen and (max-width: 600px) {
   .right-card {
     left: 0px;
-    position: none;
+    position: unset;
   }
 
   .left-card {
