--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding: 0 25px;
   background: #ffffff;
   margin-left: 280px;
   transition: 350ms;
@@ -43,7 +44,7 @@
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
-  padding: 0 0 0 40px;
+  padding: 0 0 0 18px;
   line-height: 22px;
   color: #2a2a2a;
 }
