--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,6 +1,5 @@
 .table-container {
   margin-top: 50px;
-  max-width: 90%;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -20,27 +19,47 @@
   box-shadow: 0px 2px 30px rgba(41, 40, 40, 0.08);
 }
 .responsive-table .table-header {
-  background-color: #f5f5f5;
-  font-size: 14px;
-  height: 48px;
-  text-transform: uppercase;
-  letter-spacing: 0.03em;
+    background-color: #f5f5f5;
+    font-size: 16px;
+    height: 48px;
+    letter-spacing: 0.03em;
 }
 .responsive-table .table-row {
   background-color: #ffffff;
   max-height: 300px;
+  font-weight: 300;
   box-shadow: 0px 1px 0px #ebebeb;
 }
 .responsive-table .col-4 {
   padding: 7px;
   margin: 5px;
 }
+
+.table-header {
+  /* font-family: 'Space Grotesk', sans-serif; */
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.1px;
+  color: #2a2a2a;
+  padding: 7px;
+  margin: 5px;
+}
 @media all and (max-width: 600px) {
+  .table-container {
+    display: block;
+    margin: 50px auto;
+    max-width: 400px;
+    width: 380px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
   .responsive-table .table-header {
     display: none;
   }
   .responsive-table li {
     display: block;
+    padding: 5px;
   }
   .responsive-table .col {
     flex-basis: 100%;
@@ -53,7 +72,9 @@
     color: #6c7a89;
     padding-right: 10px;
     content: attr(data-label);
-    flex-basis: 50%;
-    text-align: right;
+    flex-basis: 30%;
+  }
+  .responsive-table .table-row {
+    box-shadow: 0px 0px 9px 0px rgb(0 0 0 / 10%);
   }
 }
