--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,8 @@
 }
 
 .container {
-  /* margin-right: auto;
-  margin-left: auto;
-  max-width: 960px; */
   height: 100vh;
   display: flex;
-  /* padding-right: 10px;
-  padding-left: 10px; */
 }
 
 .dashboard,
@@ -41,12 +36,15 @@
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   padding: 0 0 0 18px;
   line-height: 22px;
   color: #2a2a2a;
+  transition: 880ms;
 }
 
 .date {
@@ -69,8 +67,26 @@
   margin-top: 60px;
 }
 
+.right-menu {
+  background-color: blueviolet;
+  width: 200px;
+  height: 40px;
+}
 @media screen and (max-width: 600px) {
   .card-container {
     height: 380px;
+    margin-top: 130px;
+  }
+  .header {
+    margin: 0px 0px 0 45px;
+    position: fixed;
+    background: #fff;
+    width: 100%;
+    height: 55px;
+    padding: 20px 0px 38px 10px;
+  }
+  .right-menu {
+    position: fixed;
+    right: 0;
   }
 }
