--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: #fff;
-  height: 80px;
+  height: 35px;
   width: 280px;
   display: flex;
   justify-content: flex-start;
@@ -11,7 +11,7 @@
   margin-left: 2rem;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 40px;
   line-height: 17px;
   background: "none";
 }
@@ -57,12 +57,13 @@
 }
 
 .nav-text a:hover {
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .selected {
   color: #000 !important;
-  background-color: #F5F5F5;
+  font-weight: 600 !important;
+  background-color: #f5f5f5;
 }
 .nav-menu-items {
   width: 280px;
@@ -97,4 +98,13 @@ span {
   line-height: 17px;
   color: #2a2a2a;
   padding: 15px 40px;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    height: 60px;
+    padding-top: 17px;
+    position: fixed;
+    width: -webkit-fit-content;
+  }
 }
