Adden right notification icon and user icon, handle not available pages, pagination on tables

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -50,7 +50,7 @@
 }
 
 .divider {
-  border: 0.1px solid rgba(128, 128, 128, 0.24);
+  border: 0.1px solid #eceaeaad;
 }
 
 @media screen and (max-width: 600px) {
