--- a/src/App.css
+++ b/src/App.css
@@ -68,9 +68,12 @@
 }
 
 .right-menu {
-  background-color: blueviolet;
-  width: 200px;
-  height: 40px;
+width: 160px;
+height: 40px;
+display: flex;
+flex-direction: row;
+padding: 0px 30px;
+cursor: pointer;
 }
 @media screen and (max-width: 600px) {
   .card-container {
@@ -84,6 +87,7 @@
     width: 100%;
     height: 55px;
     padding: 20px 0px 38px 10px;
+    z-index: 4;
   }
   .right-menu {
     position: fixed;
