--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,6 +1,6 @@
 .table-container {
-  margin-top: 50px;
-  padding-left: 20px;
+  margin-top: 35px;
+  padding-left: 10px;
   padding-right: 20px;
 }
 
@@ -19,10 +19,10 @@
   box-shadow: 0px 2px 30px rgba(41, 40, 40, 0.08);
 }
 .responsive-table .table-header {
-    background-color: #f5f5f5;
-    font-size: 16px;
-    height: 48px;
-    letter-spacing: 0.03em;
+  background-color: #f5f5f5;
+  font-size: 16px;
+  height: 48px;
+  letter-spacing: 0.03em;
 }
 .responsive-table .table-row {
   background-color: #ffffff;
@@ -44,6 +44,25 @@
   color: #2a2a2a;
   padding: 7px;
   margin: 5px;
+}
+
+.see-more {
+  width: 100%;
+  height: 60px;
+  background: #ffffff;
+  border: 1px solid #ebebeb;
+  margin-bottom: 40px;
+  border-radius: 10px;
+  font-size: 18px;
+  color: #2c665d;
+  font-weight: 600;
+}
+
+.no-more {
+  margin: 0 auto;
+  display: table;
+  padding: 20px;
+  font-size: 18px;
 }
 @media all and (max-width: 600px) {
   .table-container {
